--- a/Vehicle-registration/src/main/resources/application.properties
+++ b/Vehicle-registration/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Vehicle-registration
 
+server.port=8081
+
 spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
