--- a/Vehicle-registration/src/main/resources/application.properties
+++ b/Vehicle-registration/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:mem:vehicle_db
+spring.datasource.url=jdbc:h2:file:./data/Vehicle_registration
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
